my_derive/tests/ui/derive/test_failed.stderr
error: proc-macro derive panicked
 --> tests/ui/derive/test_failed.rs:5:10
  |
5 | #[derive(Getters)]
  |          ^^^^^^^
  |
  = help: message: only allow struct filed
